--- a/aiservice/aiservice/src/main/resources/application.yaml
+++ b/aiservice/aiservice/src/main/resources/application.yaml
@@ -11,14 +11,21 @@ spring:
     port: 5672
     username: guest
     password: guest
+    listener:
+      simple:
+        default-requeue-rejected: false   # 🔑 IMPORTANT
 
 server:
   port: 8083
 
 eureka:
+  instance:
+    hostname: localhost
+    ip-address: 127.0.0.1
+    prefer-ip-address: true
   client:
     service-url:
-     defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 rabbitmq:
   exchange:
@@ -30,5 +37,5 @@ rabbitmq:
 
 gemini:
   api:
-    url: ${GEMINI_API_URL}
-    key: ${GEMINI_API_KEY}
+    url: ${GEMINI_URL}
+    key: ${GEMINI_KEY}
